wedding/styles/main.css
.jf-loading body {
  opacity: 0;
  visibility: hidden;
}

.jf-active *,
.jf-inactive * {
  -webkit-transition: opacity 0.3s ease-out;
  transition: opacity 0.3s ease-out;
}

.parallax-container {
  height: 80vh;
}

.responsive-img {
  -o-object-fit: cover;
  object-fit: cover;
}

#gallery > div > ul > li.active  {
  box-shadow: 0 0 0;
}

#gallery .collapsible-header {
  padding: 0.5rem;
  padding-left: 1rem;
  height: 6rem;
  max-height: 6rem;
  transition: max-height 0.15s ease-out;
  text-shadow: 1px 1px 2px black;
  margin-bottom: 1rem;
}

#gallery .collapsible-header.active {
  max-height: 4rem;
  transition: max-height 0.25s ease-in;
}

#gallery .footnote {
  text-align: right;
  font-size: 1rem;
}

#yard-sale .collapsible-header {
  background: linear-gradient(
                to right,
                rgba(255,255,255,0),
                rgba(255,255,255,1) 1000px),
              url(../images/gallery/w0-h.jpg);
}

#marguerite .collapsible-header {
  background: linear-gradient(
                to right,
                rgba(255,255,255,0),
                rgba(255,255,255,1) 1000px),
              url(../images/gallery/w1-h.jpg);
}

#modern-chinese .collapsible-header {
  background: linear-gradient(
                to right,
                rgba(255,255,255,0),
                rgba(255,255,255,1) 1000px),
              url(../images/gallery/w2-h.jpg);
}

#m-plus-e-is-love .collapsible-header {
  background: linear-gradient(
                to right,
                rgba(255,255,255,0),
                rgba(255,255,255,1) 1000px),
              url(../images/gallery/w3-h.jpg);}

#picnic .collapsible-header {
  background: linear-gradient(
                to right,
                rgba(255,255,255,0),
                rgba(255,255,255,1) 1000px),
              url(../images/gallery/w4-h.jpg);}

#garden .collapsible-header {
  background: linear-gradient(
                to right,
                rgba(255,255,255,0),
                rgba(255,255,255,1) 1000px),
              url(../images/gallery/w5-h.jpg);}

#candy-bar .collapsible-header {
  background: linear-gradient(
                to right,
                rgba(255,255,255,0),
                rgba(255,255,255,1) 1000px),
              url(../images/gallery/w6-h.jpg);}

#questionnaire-modal {
  height: 100%;
}

#questionnaire-modal iframe {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
}

.page-footer .divider {
  background-color: rgba(51, 51, 51, 0.08);
}

address {
  font-style: normal;
}

.social-button {
	vertical-align: middle;
	margin: 0 0.2rem 0 0.2rem;
  padding: 0 1.2rem 0 1.2rem;
}

.social-button:hover {
  text-shadow: 2px 2px black;
}

.social-button#facebook-link {
  background-color: #3e5b98;
}

.social-button#facebook-link:hover {
  background-color: #5875b2;
}

.social-button#instagram-link {
  background-color: #9c7c6e;
}

.social-button#instagram-link:hover {
  background-color: #b69688;
}

.social-button#yahoo-link {
  background-color: #6e2a85;
}

.social-button#yahoo-link:hover {
  background-color: #88449f;
}

.social-button#googleplus-link {
  background-color: #dd4b39;
}

.social-button#googleplus-link:hover {
  background-color: #f76553;
}

